Fix GitHub CLI repository context issue in workflows
- Add missing checkout step to create-checksums job
- Add explicit --repo parameter to all gh commands
- Fix 'fatal: not a git repository' error in combined checksums job
- Apply consistent repository specification across all GitHub CLI commands
- Update both release.yml and draft-release.yml workflows

--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -196,6 +196,7 @@ jobs:
         gh release create "v$VERSION" \
           --title "Release $VERSION" \
           --notes-file release_body.md \
+          --repo ${{ github.repository }} \
           --draft \
           --prerelease
       env:
@@ -206,7 +207,7 @@ jobs:
         VERSION=${{ steps.version.outputs.next_version }}
         
         # Upload all files in build directory using GitHub CLI
-        gh release upload "v$VERSION" build/*
+        gh release upload "v$VERSION" build/* --repo ${{ github.repository }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
