--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,6 +110,7 @@ jobs:
         gh release create "${{ github.ref_name }}" \
           --title "Release ${{ steps.get_version.outputs.version }}" \
           --notes-file release_body.md \
+          --repo ${{ github.repository }} \
           $PRE_RELEASE_FLAG
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -185,7 +186,8 @@ jobs:
         # Upload binary and checksum using GitHub CLI
         gh release upload "v${{ needs.create-release.outputs.version }}" \
           "${{ matrix.asset_name }}" \
-          "${{ matrix.asset_name }}.sha256"
+          "${{ matrix.asset_name }}.sha256" \
+          --repo ${{ github.repository }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -195,6 +197,9 @@ jobs:
     needs: [create-release, build-and-upload]
     
     steps:
+    - name: Check out code
+      uses: actions/checkout@v4
+      
     - name: Create and upload combined checksums
       run: |
         VERSION=${{ needs.create-release.outputs.version }}
@@ -223,8 +228,8 @@ jobs:
         Note: Individual .sha256 files are available for each binary in this release.
         EOF
         
-        # Upload the combined checksums file
-        gh release upload "v$VERSION" checksums.txt
+        # Upload the combined checksums file with explicit repository
+        gh release upload "v$VERSION" checksums.txt --repo ${{ github.repository }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
