Implement centralized VERSION file management
- Add VERSION file to control all version references
- Update Makefile to read version from VERSION file
- Update build.sh and build.ps1 to read from VERSION file
- Update GitHub Actions workflows to use VERSION file
- Fix circular dependency in Makefile build targets
- Update main.go and cmd/root.go to accept version parameter
- Add bump-version.sh script for automated version management
- Ensure consistent versioning across binaries, tags, and documentation

Current version: 0.1.3 (matches git tag and now matches binary)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,8 +94,12 @@ jobs:
       
     - name: Build for all platforms
       run: |
-        # Set version for build
-        VERSION=${GITHUB_SHA:0:7}
+        # Set version for build (use VERSION file or fallback to commit SHA)
+        if [ -f "VERSION" ]; then
+          VERSION=$(cat VERSION)
+        else
+          VERSION=${GITHUB_SHA:0:7}
+        fi
         
         # Build for each platform
         GOOS=linux GOARCH=amd64 go build -ldflags "-X main.Version=$VERSION -s -w" -o build/gsecutil-linux-amd64 .
