--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -49,15 +49,19 @@ jobs:
     - name: Generate next version
       id: version
       run: |
-        # Get the latest tag
-        LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-        echo "Latest tag: $LATEST_TAG"
-        
-        # Extract version number (remove 'v' prefix)
-        LATEST_VERSION=${LATEST_TAG#v}
+        # Check if VERSION file exists
+        if [ -f "VERSION" ]; then
+          CURRENT_VERSION=$(cat VERSION)
+          echo "Current VERSION file: $CURRENT_VERSION"
+        else
+          # Fallback to latest tag
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          CURRENT_VERSION=${LATEST_TAG#v}
+          echo "No VERSION file, using latest tag: $CURRENT_VERSION"
+        fi
         
         # Split version into parts
-        IFS='.' read -ra VERSION_PARTS <<< "$LATEST_VERSION"
+        IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
         MAJOR=${VERSION_PARTS[0]:-0}
         MINOR=${VERSION_PARTS[1]:-0}
         PATCH=${VERSION_PARTS[2]:-0}
